--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,6 @@ android {
 }
 
 dependencies {
-
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
@@ -64,6 +63,8 @@ dependencies {
     // Data binding
     kapt "com.android.databinding:compiler:3.2.0-alpha10"
     kapt "androidx.databinding:databinding-common:4.1.0"
+    kapt "com.android.databinding:compiler:3.1.4"
+
 
     // Dagger - Hilt
     implementation "com.google.dagger:hilt-android:2.28.3-alpha"
