--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,11 +67,10 @@ dependencies {
 
 
     // Dagger - Hilt
-    implementation "com.google.dagger:hilt-android:2.28.3-alpha"
-    kapt "com.google.dagger:hilt-android-compiler:2.28.3-alpha"
-
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02"
-    kapt "androidx.hilt:hilt-compiler:1.0.0-alpha02"
+     implementation "com.google.dagger:hilt-android:2.36" //don't upgrade unless same version of kapt availale
+        kapt "com.google.dagger:hilt-android-compiler:2.36"
+        implementation 'androidx.hilt:hilt-work:1.0.0'
+        kapt "androidx.hilt:hilt-compiler:1.0.0"
 
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
