insert product and retrive product list

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,6 +94,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.0.5'
 
     implementation "com.google.firebase:firebase-firestore:21.4.0"
+    implementation 'com.firebaseui:firebase-ui-firestore:6.4.0'
 
 
 
