--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.1'
 
+    implementation "androidx.cardview:cardview:1.0.0"
+
     // Room components
     implementation "androidx.room:room-runtime:2.2.6"
     kapt "androidx.room:room-compiler:2.2.6"
