--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,8 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:28.2.1')
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
+    implementation "com.github.skydoves:powerspinner:1.0.1"
+
 
     implementation 'com.google.firebase:firebase-auth:16.0.5'
 
